fixed alignment of admin-header

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -76,10 +76,6 @@ button{
   text-align: center;
 }
 
-img{
-  max-width: 600px;
-}
-
 footer{
   background-color: #00284E;
   padding: 2rem;
@@ -105,12 +101,7 @@ footer{
 .studentimage {
   display: flex;
   justify-content: space-evenly;
-
 }
-header img{
-  margin-top: 0.5rem;
-}
-
 
 .studentview {
   display: grid;
@@ -134,9 +125,6 @@ header img{
   padding: 1rem;
 }
 
-img{
-  max-width: 12rem;
-}
 
 .Clendr{
   text-align: center;
@@ -171,10 +159,12 @@ nav ul{
   margin: 0;
   padding: 0;
 }
+
 .Nav-menu{
   background-color: #00284E;
   width: 18rem;
 }
+
 .fullpage{
   display: grid;
   grid-template-columns: 1fr 3fr;
@@ -182,32 +172,13 @@ nav ul{
 }
 
 
-header img{
-  padding-left: 3rem;
-}
-
-header{
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  text-align: left;
-  height: 5rem;
-  background-color: #00284E;
-}
-header h3,footer p{
-  color: white;
-}
-
-
 td a,.studentupload a{
   color: black;
-
- 
 }
+
 footer{
   height: 1rem;
   padding: 1rem;
-  
-
 }
 
 footer p{
@@ -233,10 +204,4 @@ footer p{
   padding-bottom: 2rem;
 }
 
-.logoo{
- 
-  margin-bottom:5px ;
-  
- height: 2rem ;
- width: 18rem;
-}
+
