--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,3 +1,26 @@
 .page-name {
     cursor: not-allowed;
 }
+
+header{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    text-align: left;
+    height: 5rem;
+    background-color: #00284E;
+    align-items: center;
+}
+
+.logo {
+    width: 17.9rem;
+    border-right: 1px solid #50ABFF;
+}
+
+header h3,footer p{
+    color: white;
+}
+
+header img{
+    padding-left: 2.8rem;
+    max-width: 50%;
+}
